# TraceLogger

./: .gitignore  LICENCE  Readme.md  pyproject.toml
docs/: Design.md
logging/: bootstrap.py  config.py  logger.py
logging/core/: listener.py  queue.py
logging/formatters/: simple.py
logging/handlers/: file.py
tracelogger/: bootstrap.py  config.py  logger.py
tracelogger/core/: context.py  listener.py  queue.py  record_factory.py
tracelogger/defaults/: areas.py  categories.py
tracelogger/formatters/: json.py
tracelogger/handlers/: console.py
