[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tracelogger"
version = "0.1.0"
description = "Queue-based structured logging system for Python"
authors = [
    { name = "Thiago Appezzato" }
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = []
  
[tool.setuptools.packages.find]
where = ["."]
include = ["tracelogger*"]